--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "yiisoft/yii2-queue": "^2.3",
         "yiisoft/yii2-redis": "^2.0",
         "yiithings/yii2-dotenv": "*",
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "bugsnag/bugsnag-symfony": "^1.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "^2.1",
